# TensorRT-Bert

./: .gitignore  Bertmodel2ONNX.py  README.md  bert_onnx_runtime.ipynb  bert_trt_workflow.ipynb  builder.py  builder.sh  calibration-cache  calibrator.py  calibrator_data.txt  kl_divergence.ipynb  log.txt  trt_helper.py
LayerNormPlugin/: LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  testLayerNormPlugin.py  testLayerNormPlugin1.py  testLayernormlog.txt
basic/: 01-bert-pytorch2onnx.ipynb  02-bert-onnx2trt.ipynb  03-bert-infer.cu  CMakeLists.txt
